# poseforge

./: .gitignore  README.md  pyproject.toml
production_models/bodyseg/: README.md  README.txt
production_models/flip_detection/: README.md  README.txt
production_models/keypoints3d/: README.md  README.txt
scripts_on_cluster/20250822_parameter_sweep/: template.run
scripts_on_cluster/20250826_parameter_sweep/: template.run
scripts_on_cluster/20250827_parameter_sweep/: gen_batch_scripts.py
scripts_on_cluster/atomic_batch_extraction/: compress_results.run  gen_batch_scripts.py  process_all.run  template.run
scripts_on_cluster/bodyseg_training/: job.run
scripts_on_cluster/contrastive_pretraining_inference/: gen_batch_scripts.py  template.run
scripts_on_cluster/contrastive_pretraining_training/: 2variants.run  job.run  low_lr.run
scripts_on_cluster/keypoints3d_training/: job.run
scripts_on_cluster/nmf_simulation/: compress_results.run  gen_batch_scripts.py  template.run
scripts_on_cluster/pose6d_training/: train.run  train_20251201a.run  train_20251201b.run  train_20251201c.run  train_20251211a.run
scripts_on_cluster/style_transfer_inference/: gen_batch_scripts.py  template.run
scripts_on_cluster/style_transfer_tiled_inference/: README.md  gen_batch_scripts.py  run_tiled_inference_all_simulations.py  selected_models.txt  template.run
scripts_on_cluster/style_transfer_training/: single.run  single_128_segment.run
scripts_on_cluster/style_transfer_training/20250822_parameter_sweep/: gen_batch_scripts.py  template.run
scripts_on_cluster/style_transfer_training/20250826_parameter_sweep/: gen_batch_scripts.py
scripts_on_cluster/style_transfer_training/20250827_parameter_sweep/: template.run
scripts_on_cluster/style_transfer_training/20250903_parameter_sweep/: gen_batch_scripts.py  template.run
scripts_on_cluster/style_transfer_training/20250905_continued_training/: gen_batch_scripts.py  template.run
scripts_on_cluster/style_transfer_training/20250905_parameter_sweep/: gen_batch_scripts.py  template.run
src/biomechpose/: util.py
src/biomechpose/contrastive_pretraining/: __init__.py  dataset.py  model.py  pipeline.py
src/biomechpose/contrastive_pretraining/scripts/: run_training.py
src/biomechpose/pose_estimation/: __init__.py  atomic_batch_dataset.py  camera.py  data.py  feature_extractor.py  latents_visualizer.py  sampler.py
src/biomechpose/pose_estimation/contrast/: __init__.py  model.py  pipeline.py
src/biomechpose/pose_estimation/contrast_representation/: __init__.py  loss.py  model.py  pipeline.py  projection_head.py
src/biomechpose/pose_estimation/data/: __init__.py  common.py
src/biomechpose/pose_estimation/keypoints3d/: model.py  pipeline.py  visualizer.py
src/biomechpose/pose_estimation/keypoints_3d/: __init__.py  config.py  model.py  pipeline.py  visualizer.py
src/biomechpose/pose_estimation/scripts/: preextract_atomic_batches.py  preprocess_samples.py  run_contrastive_pretraining.py  run_feature_extractor_inference.py  run_keypoints3d_inference.py  run_keypoints3d_training.py  test_keypoints3d_models.py  visualize_latents.py  visualize_production_keypoints3d.py
src/biomechpose/simulate_nmf/: constants.py  data.py  postprocessing.py  simulate.py  utils.py
src/biomechpose/spotlight_pipeline/: flip_detection_dataset.py  flip_detection_model.py  flip_detection_viz.py  spotlight_frame_extraction.py
src/biomechpose/style_transfer/: __init__.py  cut_inference.py  dataset.py  model.py  spotlight_processing.py  util.py  utils.py  visualize.py
src/poseforge/: util.py
src/poseforge/neuromechfly/: constants.py  data.py  mujoco_globals_nofuse.yaml  postprocessing.py  simulate.py  test_flygym_v2.ipynb
src/poseforge/pose/: __init__.py  common.py  latents_visualizer.py
src/poseforge/pose_estimation/: __init__.py  common.py  feature_extractor.py
src/poseforge/production/: __init__.py  codec_util.py  config.py
src/poseforge/simulate_nmf/: data.py  postprocessing.py  simulate.py
src/poseforge/spotlight/: input_transform.py  muscle_segmentation.py  viz.py
src/poseforge/spotlight_pipeline/: flip_detection_dataset.py
src/poseforge/style_transfer/: __init__.py  cut_inference.py  overlay_style_transfer.ipynb  tiled_inference.py  util.py
src/poseforge/util/: __init__.py  data.py  ml.py  plot.py  sys.py  video.py
tests/: test_atomic_batch_dataset.py  test_contrastive_pretraining_dataset.py  test_synthetic_data_sampler.py
(+145 files in other folders)
