[project]
name = "biomechpose"
version = "0.2.0"
description = "Pose estimation guided by a biomechanical model."
authors = [
    {name = "Sibo Wang",email = "sibo.wang@epfl.ch"}
]
readme = "README.md"
requires-python = "3.12.*"
dependencies = [
    "numpy>=2.0,<3",
    "pandas>=2.3,<3",
    "jupyter>=1.1,<2",
    "matplotlib>=3.10,<4",
    "torch>=2.7,<3",
    "torchvision==0.22.1",
    "tensorboard>=2.19,<3",
    "pillow>=11.3,<12",
    "tqdm>=4.67,<5",
    "pandas>=2.3,<3",
    "flygym>=1.2.1,<2",  # check this extra carefully
    "tyro==0.9.31",
    "wandb==0.20.1",
    "packaging>=25.0,<26",
    "GPUtil>=1.4.0,<2",
    "imageio>=2.37.0,<3",
    "imageio-ffmpeg==0.6.0",
    "joblib>=1.5.1,<2",
    "distinctipy>=1.3.4,<2",
    "psutil>=7.0.0,<8",
]

[tool.poetry]
packages = [{include = "biomechpose", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
