[project]
name = "poseforge"
version = "0.2.0"
description = "Pose estimation guided by a biomechanical model."
authors = [
    {name = "Sibo Wang-Chen",email = "sibo.wang@epfl.ch"}
]
readme = "README.md"
requires-python = "3.12.*"
dependencies = [
    "numpy>=2.0,<3",
    "scipy>=1.16.1,<2",
    "pandas>=2.3,<3",
    "jupyter>=1.1,<2",
    "matplotlib>=3.10,<4",
    "torch>=2.7,<3",
    "torchvision==0.23.0",
    "tensorboard>=2.19,<3",
    "pillow>=11.3,<12",
    "tqdm>=4.67,<5",
    "flygym>=1.2.1,<2",  # check this extra carefully
    "tyro==0.9.31",
    "wandb==0.21.1",
    "packaging>=25.0,<26",
    "GPUtil>=1.4.0,<2",
    "imageio>=2.37.0,<3",
    "imageio-ffmpeg==0.6.0",
    "joblib>=1.5.1,<2",
    "distinctipy>=1.3.4,<2",
    "psutil>=7.0.0,<8",
    "seaborn==0.13.2",
    "pyvista==0.46.3",
    "pytest>=8.4.2,<9",
    "h5py>=3.14,<4",
    "scikit-image==0.25.2",
    "scikit-learn>=1.7.2,<2",
    "PyYAML>=6.0.3,<7",
    "cmasher>=1.3.3,<2",
    "torchcodec==0.7.0",
    "torchsummary>=1.5.1,<2",
    "av<16",  # imageio depends on pyav but no pyav 16.0.0 wheel is available for my hardware yet
    "contrastive-unpaired-translation @ git+https://github.com/sibocw/contrastive-unpaired-translation.git",
    "parallel-video-io @ git+https://github.com/sibocw/parallel-video-io.git",
]

[tool.poetry]
packages = [{include = "poseforge", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
